tests/NormalTests/paczka1/fuzzy1/77358123.err
Error in line 5: A242 S213 97,1
Error in line 19: knSAQ A894 15,9
Error in line 17: A242 A242 18,0
Error in line 22: A242 A894 68,8
Error in line 30: 2Dj S213 59,7
Error in line 39: pKJi A242 64,78
